v4.0.1
- Fixed: radio webstream support (was broken since Kodi v18 streaming API changes)

v4.0.0
- Update to PVR addon API v6.0.0

v3.5.17:
- Added: GetStreamReadChunkSize support (Refs #92)
- Fixed: TSReader (RTSP): pause hangs Kodi

v3.5.16:
- Fixed: skin background for the custom DialogRecordSettings on unsupported skins
- Fixed: DialogRecordSettings for skin.estuary
- Fixed: DialogRecordSettings for skin.transparency
- Fixed: TSReader RTSP playback (regression bug introduced in v3.5.14)

v3.5.15:
- Fixed: recording playback when the description contains text with a return

v3.5.14:
- Fixed: Delete the tsreader when tuning to a new channel failed. This fixes the first re-tune to a working channel after a failure
- Updated: recommended TVServerKodi version to build 140
- Recording playback: update the end time if the recording is still ongoing
- Recording: Prevent setting a negative last played position. MediaPortal does not like this.
- Recording: mark in-progress recording as "real-time" also on non-Windows targets
- Fixed: various 64-bit compiler warnings
- Fixed: Increase the command buffer size to fit the full contents of strRecordingId in DeleteRecording() and GetRecordings()
- Fixed: tsreader: checking for < 0 on unsigned values is useless

v3.5.13:
- Translation update from Transifex

v3.5.12:
- Translation update from Transifex

v3.5.11:
- Fixed: GetAddonCapabilities() did not explicitly set all newly added capabilities
- Fixed: Error: "Couldn't get 'defaultrecordinglifetime' setting, falling back to '100' as default"
- Fixed: Kodi crash during plugin load

v3.5.10
- Android: fix compiling for android with ndk-18  (credits Rechi)

v3.5.9
- Translation update from Transifex

v3.5.8
- Windows UWP: Fixes for recording playback (TSReader) via the vfs.smb2 plugin
- Windows UWP: disable recording thumbnails code for now (does not work over network shares)

v3.5.7
- Fixed: timeshift support for Live TV in v18 (TSReader)

v3.5.6