@@ -388,6 +388,11 @@ namespace MPTV
 
                 KODI->Log(LOG_DEBUG, "%s:: move from %I64d to %I64d tsbufpos  %I64d", __FUNCTION__, pos_before, pos_after, timeShiftBufferPos);
                 usleep(100000);
+
+                // Set the stream start times to this new channel
+                time(&m_startTime);
+                m_startTickCount = GetTickCount64();
+
                 return true;
             }
             return false;
